# megaqc-mvp

./: .dockerignore  Dockerfile  deploy-to-fly.sh  deploy-trino.sh  docker-compose.yml  fly.toml  pyproject.toml  superset_config.py  superset_init.sh
megaqc-superset/: Dockerfile  fly.toml  superset_config.py
megaqc-trino/etc/: config.properties
scripts/: check-aws-creds.sh  debug-trino.sh  reset-fly-app.sh  test-trino-sql.sh
superset-fly/: Dockerfile  fly.toml  superset_init.sh
trino-fly/: Dockerfile  fly.toml
trino-fly/etc/catalog/: iceberg.properties
